@@ -1,0 +1,59 @@
+<?php
+// $Id$
+
+/**
+ * @see CommonXssUnitTest
+ */
+class ViewsHandlerTestFileSize extends ViewsSqlTest {
+  public static function getInfo() {
+    return array(
+      'name' => 'Field: file_size',
+      'description' => 'Test the core views_handler_field_file_size handler.',
+      'group' => 'Views Handlers',
+    );
+  }
+
+  function dataSet() {
+    $data = parent::dataSet();
+    $data[0]['age'] = 0;
+    $data[1]['age'] = 10;
+    $data[2]['age'] = 1000;
+    $data[3]['age'] = 10000;
+    dd($data);
+
+    return $data;
+  }
+
+  function viewsData() {
+    $data = parent::viewsData();
+    $data['views_test']['age']['field']['handler'] = 'views_handler_field_file_size';
+
+    return $data;
+  }
+
+  public function testFieldXss() {
+    $view = $this->getBasicView();
+
+    $view->display['default']->handler->override_option('fields', array(
+      'age' => array(
+        'id' => 'age',
+        'table' => 'views_test',
+        'field' => 'age',
+      ),
+    ));
+
+    $this->executeView($view);
+
+    // Test with the formatted option.
+    $this->assertEqual($view->field['age']->advanced_render($view->result[0]), '');
+    $this->assertEqual($view->field['age']->advanced_render($view->result[1]), '10 bytes');
+    $this->assertEqual($view->field['age']->advanced_render($view->result[2]), '1000 bytes');
+    $this->assertEqual($view->field['age']->advanced_render($view->result[3]), '9.77 KB');
+    // Test with the bytes option.
+    $view->field['age']->options['file_size_display'] = 'bytes';
+    $this->assertEqual($view->field['age']->advanced_render($view->result[0]), '');
+    $this->assertEqual($view->field['age']->advanced_render($view->result[1]), 10);
+    $this->assertEqual($view->field['age']->advanced_render($view->result[2]), 1000);
+    $this->assertEqual($view->field['age']->advanced_render($view->result[3]), 10000);
+  }
+}
